gccida/c0/optimize_inline_calls
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/optimize_inline_calls/src/tree-inline.c:1482:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *prev_fn; // [rsp+8h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/optimize_inline_calls/src/tree-inline.c:1483:1: error: unknown type name 'inline_data_0'; did you mean 'inline_data'?
inline_data_0 id; // [rsp+10h] [rbp-50h] BYREF 
^~~~~~~~~~~~~
inline_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/optimize_inline_calls/src/tree-inline.c:101:3: note: 'inline_data' declared here
} inline_data;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/optimize_inline_calls/src/tree-inline.c:1508:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.tree_inlining.add_pending_fn_decls( &id, prev_fn); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/optimize_inline_calls/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/optimize_inline_calls/src/obj/tree-inline.o] Error 1
